Fix strange header bug on Firefox
Keep header link backgrounds from turning white after being clicked in
Firefox. This is due to Firefox focusing those elements upon click
(while other browsers do not).

--- a/css/idx.css
+++ b/css/idx.css
@@ -240,7 +240,7 @@ header a {
     transition: background-color 0.15s, color 0.15s;
 }
 
-.top-links ul > li > a:hover {
+.top-links ul > li > a:hover, .top-links ul > li > a:focus {
     color: #fff;
     background-color: #333;
 }
